# voice-agent-runtime

./: .gitignore  LICENSE  README.md
configs/agent_profiles/: receptionist.yaml
docs/: 11-06.md  HLD.md  LLD.md  Three_Tier_Architecture.md  backlog.md  qna.md  raw_idea.md  true_duplex.md  vad.md
examples/: local_brain.py  test_vad_standalone.py
proto/: agent.proto  gateway.proto
services/: Readme.md
services/inference-py/: README.md  local_brain.py  main.py  pyproject.toml  requirements.txt
services/inference-py/grpc_server/: agent_pb2.py  agent_pb2_grpc.py
services/inference-py/llm/: __init__.py  engine.py
services/inference-py/stt/: __init__.py  transcriber.py
services/inference-py/test/: synth_test.py  test_detector.py  test_stt_llm_tts.py  test_vad.py  test_vad_false_start.py  test_vad_ramble.py  test_vad_standalone.py  test_vad_state_persistence.py
services/inference-py/tts/: __init__.py  synthesizer.py
services/inference-py/vad/: __init__.py  audio.py  detector.py  preprocessor.py
services/orchestrator-go/: README.md  go.mod  go.sum
services/orchestrator-go/cmd/: main.go
services/orchestrator-go/cmd/gateway-server/: main.go
services/orchestrator-go/cmd/gateway-test-client/: main.go
services/orchestrator-go/internal/config/: config.go
services/orchestrator-go/internal/gateway/: server.go
services/orchestrator-go/internal/session/: session.go
