[project]
name = "inference-py"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "av==17.0.1",
    "certifi==2026.5.20",
    "click==8.4.1",
    "colorama==0.4.6",
    "ctranslate2==4.7.2",
    "faster-whisper==1.2.1",
    "filelock==3.29.0",
    "flatbuffers==25.12.19",
    "fsspec==2026.4.0",
    "grpcio==1.81.0",
    "grpcio-tools==1.81.0",
    "h11==0.16.0",
    "hf-xet==1.5.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.17.0",
    "idna==3.18",
    "markdown-it-py==4.2.0",
    "mdurl==0.1.2",
    "numpy==2.4.6",
    "ollama==0.6.2",
    "onnxruntime==1.26.0",
    "packaging==26.2",
    "piper-tts>=1.4.2",
    "protobuf==6.33.6",
    "pyaudio==0.2.14",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pygments==2.20.0",
    "pyyaml==6.0.3",
    "rich==15.0.0",
    "scipy>=1.17.1",
    "shellingham==1.5.4",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
    "speechrecognition==3.16.1",
    "tokenizers==0.23.1",
    "tqdm==4.67.3",
    "typer==0.25.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
]
